<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~
  ~ This file is part of ProcessManager.
  ~
  ~ ProcessManager is free software: you can redistribute it and/or modify it under the terms of version 3 of the
  ~ GNU Lesser General Public License as published by the Free Software Foundation.
  ~
  ~ ProcessManager is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License along with ProcessManager.  If not,
  ~ see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="unnamed_task">&lt;Unnamed&gt;</string>
    <string name="app_name">Darwin PMI</string>
    <string name="missing_diagram">No diagram loaded</string>
    <string name="ac_export">Export</string>
    <string name="ac_share_pm">Share</string>
    <string name="ac_export_svg">Export SVG</string>
    <string name="ac_share_pm_svg">Share SVG</string>
    <string name="ac_play">Play</string>
    <string name="ac_next">Next</string>
    <string name="lbl_label">Provide the node label</string>
    <string name="hint_node_label">Enter a label</string>
    <string name="radio_and">All (and)</string>
    <string name="radio_or">At least one (or)</string>
    <string name="radio_xor">Exactly one (xor)</string>
    <string name="radio_other">Other</string>
    <string name="lbl_min">Min</string>
    <string name="lbl_max">Max</string>
    <string name="title_processmodel_list">ProcessModels</string>
    <string name="title_processmodel_detail">ProcessModel Detail</string>
    <string name="example_1_name">Example 1</string>
    <string name="btn_pm_edit">Edit</string>
    <string name="btn_pm_execute">Execute</string>
    <string name="menu_add_pm">New Model</string>
    <string name="menu_add_pm_cond">New</string>
    <string name="menu_settings">Settings</string>
    <string name="title_saveas">Save as</string>
    <string name="btn_save">Save</string>
    <string name="ac_import">Import</string>
    <string name="ac_delete">Delete</string>
    <string name="ac_cancel">Cancel</string>
    <string name="btn_pm_clone">Copy as new</string>
    <string name="btn_pm_publish">Publish to server</string>
    <string name="title_tasklist">Tasks</string>
    <string name="btn_task_complete">Complete task</string>
    <string name="menu_ac_reset">Reset</string>
    <string name="menu_ac_sync_tasks">Sync tasks</string>
    <string name="menu_ac_sync_pm">Sync models</string>
    <string name="default_sync_location">https://darwin.bournemouth.ac.uk/ProcessEngine/</string>
    <string name="text_load_pm_error">Error loading process model</string>
    <string name="title_activity_overview">Darwin PMI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_overview_maintext">Darwin Process Manager Interface</string>
    <string name="header_overview_email">pdvrieze@bournemouth.ac.uk</string>
    <string name="menu_home">Home</string>
    <string name="menu_tasks">Tasks</string>
    <string name="nav_models">Models</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_group_other">Other</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="model_unnamed"><![CDATA[<Unnamed>]]></string>
    <string name="title_editor">PMI Editor</string>
    <string name="pref_title_account">Account</string>
    <string name="task_title_format">%1$d: %2$s</string>
    <string name="taskstate_available">Available</string>
    <string name="taskstate_taken">Accepted</string>
    <string name="taskstate_started">Started</string>
    <string name="taskstate_complete">Finished</string>
    <string name="taskstate_failed">Failed</string>
    <string name="taskstate_cancelled">Cancelled</string>
    <string name="btn_task_accept">Accept</string>
    <string name="btn_task_cancel">Cancel task</string>
    <string name="hint_mark_pm_favourite">Mark favourite</string>
    <string name="title_overview_fragment">PMI Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_overview_pending_tasks">Pending tasks</string>
    <string name="title_overview_favourite_models">Start favourite model</string>
    <string name="lbl_no_pending_tasks">No pending tasks</string>
    <string name="lbl_no_quick_models">There are no favourite, executable models</string>
    <string name="lbl_overview_tasklist_error">Error loading tasks</string>
    <string name="lbl_overview_modellist_error">Error loading models</string>
    <string name="lbl_ac_kind">Activity kind</string>
    <string name="radio_ac_service">Web service invocation</string>
    <string name="radio_ac_unspec">Unspecified</string>
    <string name="radio_ac_human">Human interaction</string>
    <string name="radio_ac_other">Other (expert only)</string>
    <string name="title_activity_user_task_editor">Edit user task</string>
    <string name="userTaskFabMenuOther">Other…</string>
    <string name="userTaskFabMenuTitle">Add item</string>
    <string name="userTaskFabMenuPassword">Password</string>
    <string name="userTaskFabMenuTextEntry">Text entry</string>
    <string name="userTaskFabMenuLabel">Label</string>
    <string name="userTaskFabMenuList">Selection List</string>
    <string name="lbl_editName">Name</string>
    <string name="lbl_editLabel">Label</string>
    <string name="lbl_editValue">Value</string>
    <string name="dlg_title_item_details">Item details</string>
    <string name="dlg_title_edit_taskitem">Edit task item</string>
    <string name="btn_label_var">Var…</string>
    <string name="dlgTitleSelectVar">Select variable</string>
    <string name="cdesc_go_into">Go</string>
    <string name="cdesc_drag">Drag</string>
    <string name="cdesc_show_all">Show all</string>
    <string name="edit_item_label_name">name:</string>
    <string name="edit_item_label_type">type:</string>
    <string name="nav_share">Share</string>
    <string name="title_activity_overview_debug">Debug PMI</string>
    <string name="pref_sync_local_title">Synchronous loading</string>
    <string name="title_activity_overview2">OverviewActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>