<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/ac_cancel"
        app:showAsAction="always|withText"
        android:title="@string/ac_cancel">
    </item>
    <item
        android:id="@+id/ac_next"
        android:enabled="true"
        android:icon="@drawable/ic_action_step"
        app:showAsAction="ifRoom"
        android:title="@string/ac_next">
    </item>
    <item
        android:id="@+id/ac_play"
        android:enabled="true"
        android:icon="@drawable/ic_action_fast_forward"
        app:showAsAction="ifRoom"
        android:title="@string/ac_play">
    </item>
    <!--
    item android:id="@+id/ac_zoom_inc" android:title="Zoom +" android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_zoom"></item>
    <item android:id="@+id/ac_zoom_dec" android:title="Zoom -" android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_revert"></item
    -->
    <item
        android:id="@+id/ac_reset"
        android:title="@string/menu_ac_reset">
    </item>

</menu>