<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~
  ~ This file is part of ProcessManager.
  ~
  ~ ProcessManager is free software: you can redistribute it and/or modify it under the terms of version 3 of the
  ~ GNU Lesser General Public License as published by the Free Software Foundation.
  ~
  ~ ProcessManager is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License along with Foobar.  If not,
  ~ see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/ac_export"
        android:title="@string/ac_export" android:icon="@drawable/ic_action_export">
    </item>
    <item
        android:id="@+id/ac_export_svg"
        android:title="@string/ac_export_svg">
    </item>
    <item
        android:id="@+id/ac_share_pm"
        android:title="@string/ac_share_pm">
    </item>
    <item
        android:id="@+id/ac_share_pm_svg"
        android:title="@string/ac_share_pm_svg">
    </item>
    
</menu>