<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~
  ~ This file is part of ProcessManager.
  ~
  ~ ProcessManager is free software: you can redistribute it and/or modify it under the terms of version 3 of the
  ~ GNU Lesser General Public License as published by the Free Software Foundation.
  ~
  ~ ProcessManager is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License along with Foobar.  If not,
  ~ see <http://www.gnu.org/licenses/>.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="nl.adaptivity.process.editor.android.ActivityEditDialogFragment">

    <data>

        <variable name="node"
                  type="nl.adaptivity.process.diagram.DrawableActivity" />

    </data>

    <LinearLayout
            style="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

        <include layout="@layout/dlg_node_edit_common"
                 bind:node="@{node}"
                 android:id="@+id/dlg_node_edit_common" />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/default_margin"
                  android:text="@string/lbl_ac_kind"
                  android:labelFor="@+id/rg_ac_kind" />

        <RadioGroup
                android:id="@+id/rg_ac_kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/half_margin">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/radio_ac_human"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_ac_human" />

                <android.support.v4.widget.Space
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_arrow_forward_24dp"
                        android:id="@+id/editAcHuman"
                        app:enabled="@{false}"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/radio_ac_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_ac_service" />

                <android.support.v4.widget.Space
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_arrow_forward_24dp"
                        android:id="@+id/editAcService"
                        app:enabled="@{true}"/>
            </LinearLayout>

            <RadioButton
                    android:id="@+id/radio_ac_unspecified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:checked="true"
                    android:text="@string/radio_ac_unspec" />

            <RadioButton
                    android:id="@+id/radio_ac_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_ac_other" />
        </RadioGroup>


    </LinearLayout>
</layout>